--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,16 +6,16 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="bg-gray-400">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container" class="bg-gray-400">
-    <strong>Ready to create an app?</strong>
-    <p class="text-white">Start with Ionic <a target="_blank" rel="noopener noreferrer"
-        href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div id="container">
+
+    <app-profile></app-profile>
+
   </div>
 </ion-content>
