--- a/src/app/shared/profile/profile.component.html
+++ b/src/app/shared/profile/profile.component.html
@@ -20,24 +20,27 @@
   </div>
   <div class="mt-6 pt-3 flex flex-wrap mx-6 border-t">
     <div
-      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-indigo-600 border-indigo-600 hover:bg-indigo-600 hover:text-indigo-100 cursor-default">
+      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-danger-default border-danger-default hover:bg-dark-shade hover:text-dark-contrast cursor-default">
       User experience
     </div>
     <div
-      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-indigo-600 border-indigo-600 hover:bg-indigo-600 hover:text-indigo-100 cursor-default">
+      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-danger-default border-danger-default hover:bg-dark-shade hover:text-dark-contrast cursor-default">
       VueJS
     </div>
     <div
-      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-indigo-600 border-indigo-600 hover:bg-indigo-600 hover:text-indigo-100 cursor-default">
+      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-danger-default border-danger-default hover:bg-dark-shade hover:text-dark-contrast cursor-default">
       TailwindCSS
     </div>
     <div
-      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-indigo-600 border-indigo-600 hover:bg-indigo-600 hover:text-indigo-100 cursor-default">
+      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-danger-default border-danger-default hover:bg-dark-shade hover:text-dark-contrastcursor-default">
       React
     </div>
     <div
-      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-indigo-600 border-indigo-600 hover:bg-indigo-600 hover:text-indigo-100 cursor-default">
+      class="text-xs mr-2 my-1 uppercase tracking-wider border px-2 text-danger-default border-danger-default hover:bg-dark-shade hover:text-dark-contrast cursor-default">
       Painting
     </div>
+  </div>
+  <div class="">
+    <ion-button color="primary" expand="block">Add to Network</ion-button>
   </div>
 </div>
